[tool.poetry]
name = "external-sort"
version = "0.1"
description = "External sort algorithm python implementation with easy to use interface."
authors = ["Titanium Hocker <inbox@titaniumhocker.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
jedi = "^0.18.0"
flake8 = "^3.8.4"
mypy = "^0.800"
isort = "^5.7.0"
flakehell = "^0.9.0"
flake8-isort = "^4.0.0"
pytest = "^6.2.2"
tox = "^3.22.0"
pytest-cov = "^2.11.1"
coverage = {extras = ["toml"], version = "^5.4"}
flake8-docstrings = "^1.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flakehell]
format = "colored"
max_line_length = 100

[tool.flakehell.plugins]
pyflakes = ["+*"]
pycodestyle = ["+*"]
flake8-docstrings = ["+*"]
flake8-isort = ["+*"]

[tool.isort]
profile = "hug"
src_paths = ["external_sort", "tests"]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = [
    "external_sort"
]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py36,py37,py38,py39
isolated_build = True

[tox:.package]
basepython = python3

[testenv]
commands = pytest
deps =
    pytest
"""
